# sysadmindb-rust

./: Cargo.toml  LICENSE  Makefile  README.md
.sqlx/: query-85730f95aad54dcca5df1713860cab0a9aa03e6e7ee72d9b412b6a99caa6516f.json  query-bd3ebb2045b4945494c1d40f76e4f76e342878fd14c4ff6f3cbee9af510ad0b7.json
migrations/: 20260525180032_init_db.sql
src/: main.rs
