[package]
name = "sysadmindb-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bytes = "1"
regex = "1.12.3"
sqlx-cli = "0.8.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["macros"] }

serde_json = "1.0.150"
serde = "1.0.228"
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"



